--- a/fsc_demo_1/app/src/main/res/layout/fragment_first.xml
+++ b/fsc_demo_1/app/src/main/res/layout/fragment_first.xml
@@ -31,6 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/fsc_tomato"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="298dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_first" />
 </androidx.constraintlayout.widget.ConstraintLayout>
