--- a/fsc_demo_1/app/src/main/res/layout/content_main.xml
+++ b/fsc_demo_1/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_toLeftOf="@id/idBtnAdd"
-        android:hint="Enter item name to add in ist" />
+        android:hint="Enter item name to add in list" />
 
     <!--button for adding item from edit text to list-->
     <Button
