--- a/fsc_demo_1/app/src/main/res/layout/activity_main.xml
+++ b/fsc_demo_1/app/src/main/res/layout/activity_main.xml
@@ -10,32 +10,47 @@
 
     <!--on below line we are creating edit text
         for adding a new item to list-->
+
+    <!--button for adding item from edit text to list-->
+
+    <!--list view to display list of languages-->
+
     <EditText
         android:id="@+id/idEdtItemName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="-75dp"
+        android:layout_marginBottom="4dp"
         android:layout_toStartOf="@id/idBtnAdd"
-        android:hint="Enter item name to add in list"
+        android:layout_toEndOf="@+id/delete"
         android:autofillHints="."
+        android:hint="Enter item name to add in list"
         tools:ignore="HardcodedText,TextFields" />
 
-    <!--button for adding item from edit text to list-->
     <Button
         android:id="@+id/idBtnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_margin="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="9dp"
         android:text="Add"
         android:textAllCaps="false"
         tools:ignore="HardcodedText" />
 
-    <!--list view to display list of languages-->
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete" />
+
     <ListView
         android:id="@+id/idLVLanguages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/idEdtItemName" />
+        android:layout_below="@id/idEdtItemName"
+        android:layout_marginTop="69dp" />
 
 </RelativeLayout>
