--- a/Tomato/app/src/main/res/layout/content_main.xml
+++ b/Tomato/app/src/main/res/layout/content_main.xml
@@ -1,43 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/idRLContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/green"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <!--on below line we are creating edit text
-        for adding a new item to list-->
-    <EditText
-        android:id="@+id/idEdtItemName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:layout_toLeftOf="@id/idBtnAdd"
-        android:hint="Enter item name to add in list" />
-
-    <!--button for adding item from edit text to list-->
-    <Button
-        android:id="@+id/idBtnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="4dp"
-        android:text="Add"
-        android:textAllCaps="false" />
-
-    <!--list view to display list of languages-->
-    <ListView
-        android:id="@+id/idLVLanguages"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/idEdtItemName" />
+        android:gravity="center|center_horizontal|center_vertical"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Begin"
+            android:layout_marginBottom="7dp" />
+        <Button
+            android:id="@+id/btnList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
+            android:gravity="center"
+            android:text="Tasks List" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
