--- a/Tomato/app/src/main/res/values/colors.xml
+++ b/Tomato/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="tomato">#FFFF0000</color>
+    <color name="green">#FF44FF66</color>
 </resources>
