--- a/Tomato/app/src/main/res/layout/activity_main.xml
+++ b/Tomato/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -22,8 +22,8 @@
         android:text="Add Reminder" />
 
     <!-- List of reminders -->
-    <ListView
-        android:id="@+id/listViewReminders"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewReminders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp" />
